# Web-MusicBrainz

./: .gitignore  AUTHORS  LICENSE  Makefile  README  musicbrainz.cabal
Audio/: MusicBrainz.hs
Audio/MusicBrainz/: Monad.hs  Types.hs  XML.hs
Audio/MusicBrainz/Testing/: Ext.hs  Main.hs  XML.hs
Audio/MusicBrainz/Testing/fixtures/: artist_full.xml  artist_min.xml
Audio/MusicBrainz/XML/: FromXML.hs
Text/XML/Cursor/: FromXML.hs
Web/: MusicBrainz.hs
Web/MusicBrainz/: Monad.hs  Types.hs  XML.hs
Web/MusicBrainz/Testing/: Ext.hs  Main.hs  XML.hs
