name: musicbrainz
version: 0.0.0
synopsis: Haskell implementation of the MusicBrainz API
description:
   Implements the MusicBrainz REST API. MusicBrainz is an open music
   identification database, comparable to CDDB. Learn more at
   <http://www.musicbrainz.com>.

category:           Audio
license:            BSD3
license-file:       LICENSE
author:             Michael Xavier <michael@michaelxavier.net>
maintainer:         Michael Xavier <michael@michaelxavier.net>
cabal-version:      >= 1.6
build-type:         Simple
extra-source-files: README
homepage:           http://github.com/michaelxavier/MusicBrainz

library
 Exposed-modules: Audio.MusicBrainz,
                  Audio.MusicBrainz.Types
 Ghc-Options:     -Wall
 build-depends:   base            >= 4        && < 5,
                  text            >= 0.11.0.5 && < 0.12,
                  http-enumerator >= 0.6.5    && < 0.7,
                  http-types      >= 0.6.0    && < 0.7,
                  url             >= 2.1.2    && < 2.3,
                  iso3166-country-codes == 0.20101223.3,
                  split           >= 0.1.4    && < 0.2,
                  xml-enumerator  >= 0.3.4    && < 0.4

source-repository head
  type:     git
  location: git://github.com/michaelxavier/MusicBrainz.git
